# Meta2Cloud

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.standalone.yml  docker-compose.yml  organizer.py  pipeline.py  pyproject.toml  requirements.txt
config/: config.example.yaml
core/: __init__.py  __main__.py  organizer.py  pipeline.py  subtitle_matcher.py
doc/: 115-api-cookie.md  115-api.md  anibt-open-api.md  cloud-storage-integration.md  resource-site-integration.md
drive/: client.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend-archive/: index.html  package-lock.json  vite.config.js
mediaparser/: __init__.py  config.py  infopath.py  meta_anime.py  meta_base.py  meta_video.py  metainfo.py  release_group.py  streaming_platform.py  string_utils.py  tmdb.py  tmdb_image.py  tokens.py  words.py
nfo/: generator.py  image_uploader.py
scraper/: __init__.py  models.py
scripts/: build.sh  delete_u115_cover_images.py  delete_u115_episode_nfo.py  dev.sh  generate_u115_movie_nfo.py  organize_subtitles.py  sync_library_to_ingest.py  test.ps1  test.sh  upload.example.sh
storage/: __init__.py  base.py  google_drive.py  pan115.py
test/: test_115_integration.py  test_anibt_scraper.py  test_library_data.py  test_media_actions.py  test_mediavault_integration.py  test_organizer.py  test_pipeline_replace.py  test_storage.py  test_tmdb_image_config.py
u115pan/: README.md  client.py
webui/: api.py  app.py  ingest_store.py  (+4 more)
(+121 files in other folders)
